force-app/main/default/objects/Attendance__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>DATE( YEAR(TODAY() ), MONTH(TODAY() ), Day(TODAY() ))</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>