force-app/main/default/objects/Attendance__c/fields/Trainee_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trainee Name</label>
    <referenceTo>Trainee__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>