force-app/main/default/objects/Attendance__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Training Name</label>
    <referenceTo>New_Training__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>